wordpress-mysql/base/wordpress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress-mysql
      tier: frontend
  template:
    metadata:
      labels:
        app: wordpress-mysql
        tier: frontend
    spec:
      containers:
      - name: wordpress
        image: wordpress:5.6-apache
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: data
          mountPath: /var/www/html
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: wordpress-pvc
