wordpress-mysql/base/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
spec:
  type: ClusterIP
  selector:
    app: wordpress-mysql
    tier: database
  ports:
  - port: 3306
