wordpress-mysql/base/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  rules:
  - host: "example.com"
    http:
      paths:
      - path: "/wp"
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
